--- a/materials/AlgaeDrive.ipynb
+++ b/materials/AlgaeDrive.ipynb
@@ -184,8 +184,7 @@
           "output_type": "execute_result",
           "data": {
             "text/html": [
-              "<img src=\"https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/e8a403da6b212d5223eae804e6cb78cb-678898ce730d0ce3c9e50635d87ba1df:getPixels\"/>"
-              "<img src=\"https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/e8a403da6b212d5223eae804e6cb78cb-678898ce730d0ce3c9e50635d87ba1df:getPixels\"/>"
+              "<img src=\"https://github.com/chqzeng/chqzeng.github.io/images/ERA5.png\"/>"
             ],
             "text/plain": [
               "<IPython.core.display.Image object>"
