--- a/materials/AlgaeDrive.ipynb
+++ b/materials/AlgaeDrive.ipynb
@@ -184,7 +184,8 @@
           "output_type": "execute_result",
           "data": {
             "text/html": [
-              "<img src=\"https://github.com/mattschapman/mattschapman.github.io/blob/master/images/mobility.png\"/>"
+             
+             "<img src="../image/ERA5.png">"
             ],
             "text/plain": [
               "<IPython.core.display.Image object>"
