--- a/materials/AlgaeDrive.ipynb
+++ b/materials/AlgaeDrive.ipynb
@@ -184,7 +184,7 @@
           "output_type": "execute_result",
           "data": {
             "text/html": [
-             "<img src="ERA5.png">"
+             "<img src=\"ERA5.png\"/>"
             ],
             "text/plain": [
               "<IPython.core.display.Image object>"
