--- a/materials/AlgaeDrive.ipynb
+++ b/materials/AlgaeDrive.ipynb
@@ -180,11 +180,12 @@
             "Global temperature Jun 2020 monthly avg (C)\n"
           ]
         },
+        "<img align=\"left\" src=\"ERA5.png\" width=\"500\" />\n",
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
-             "<img src=/"ERA5.png/"/>"
+             "<img src=\"ERA5.png\"/>"
             ],
             "text/plain": [
               "<IPython.core.display.Image object>"
