--- a/materials/AlgaeDrive.ipynb
+++ b/materials/AlgaeDrive.ipynb
@@ -172,6 +172,7 @@
         "outputId": "67cc170b-7290-4959-a806-194a0e3a638f"
       },
       "execution_count": 22,
+
       "outputs": [
         {
           "output_type": "stream",
@@ -180,7 +181,13 @@
             "Global temperature Jun 2020 monthly avg (C)\n"
           ]
         },
-        "<img align=\"left\" src=\"ERA5.png\" width=\"500\" />\n",
+        
+        {
+          "<img align=\"left\" src=\"https://avatars1.githubusercontent.com/u/13629408?s=400&v=4\" width=\"60\" />\n",
+          "## 2.5 The Kubernetes Dashboard UI\n",
+          "\n"
+        },
+        
         {
           "output_type": "execute_result",
           "data": {
