--- a/materials/AlgaeDrive.ipynb
+++ b/materials/AlgaeDrive.ipynb
@@ -200,8 +200,8 @@
    {
 	"cell_type": "code",
 	"source": [
-     <img src=\"ERA5.png\" width=\"100\" />"
-   ]
+     "avgT=era5_2mt.mosaic().add(-273.15) "
+      ]
 	},
     
     {
