--- a/materials/AlgaeDrive.ipynb
+++ b/materials/AlgaeDrive.ipynb
@@ -196,7 +196,20 @@
         }
       ]
     },
-
+  
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 0. Intro\n",
+        "Use continuous geographic, hydrological, climate, and meteorological datasets as input to train neural network(NN) and random forest(RF) models, to determine the major environmentl drivers of algae growth in lakes.\n",
+        "Use Google Cloud Platform (GCP) to extract relative data from its [Earth Engine Dataset](https://developers.google.com/earth-engine/datasets) and run further NN models\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "dqS_PlyedNxv"
+      }
+    },
+    
     {
       "cell_type": "code",
       "source": [
