--- a/materials/AlgaeDrive.ipynb
+++ b/materials/AlgaeDrive.ipynb
@@ -200,11 +200,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 0. Intro\n",
-        "Use continuous geographic, hydrological, climate, and meteorological datasets as input to train neural network(NN) and random forest(RF) models, to determine the major environmentl drivers of algae growth in lakes.\n",
-        "Use Google Cloud Platform (GCP) to extract relative data from its [Earth Engine Dataset](https://developers.google.com/earth-engine/datasets) and run further NN models\n",
-        "\n"
-      ]
+        "<img align=\"left\" src=\"https://avatars1.githubusercontent.com/u/13629408?s=400&v=4\" width=\"60\" />\n",
+        "\n",
+      ],
+      "metadata": {
+        "id": "dqS_PlyedNxw"
+      }
     },
     
     {
