--- a/materials/AlgaeDrive.ipynb
+++ b/materials/AlgaeDrive.ipynb
@@ -200,7 +200,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<img align=\"left\" src=\"https://avatars1.githubusercontent.com/u/13629408?s=400&v=4\" width=\"60\" />\n",
+        "test line\n",
         "\n",
       ],
       "metadata": {
