--- a/materials/AlgaeDrive.ipynb
+++ b/materials/AlgaeDrive.ipynb
@@ -201,6 +201,7 @@
       "cell_type": "markdown",
       "source": [
         " Intro\n",
+        "<img src=\"https://github.com/chqzeng/chqzeng.github.io/images/ERA5.png\"/>",  
         "\n"
       ],
       "metadata": {
