--- a/materials/AlgaeDrive.ipynb
+++ b/materials/AlgaeDrive.ipynb
@@ -200,8 +200,7 @@
    {
       "cell_type": "markdown",
       "source": [
-        " Intro\n",
-        "<img src=\"ERA5.png\"/>",  
+        "<img src=\"ERA5.png\"/> \n",  
         "\n"
       ],
       "metadata": {
