--- a/materials/AlgaeDrive.ipynb
+++ b/materials/AlgaeDrive.ipynb
@@ -185,7 +185,7 @@
           "output_type": "execute_result",
           "data": {
             "text/html": [
-             "<img src=\"ERA5.png\"/>"
+             "<img src=\"https://github.com/mattschapman/mattschapman.github.io/blob/master/images/mobility.png?raw=true\"/>"
             ],
             "text/plain": [
               "<IPython.core.display.Image object>"
@@ -200,7 +200,7 @@
    {
       "cell_type": "markdown",
       "source": [
-        "<img src=\"ERA5.png\"/> \n",  
+        "<img src=\"https://github.com/mattschapman/mattschapman.github.io/blob/master/images/mobility.png?raw=true\"/> \n",  
         "\n"
       ],
       "metadata": {
