--- a/materials/AlgaeDrive.ipynb
+++ b/materials/AlgaeDrive.ipynb
@@ -185,7 +185,7 @@
           "output_type": "execute_result",
           "data": {
             "text/html": [
-             "<img src=\"https://github.com/mattschapman/mattschapman.github.io/blob/master/images/mobility.png?raw=true\"/>"
+             "<img src=\"https://github.com/chqzeng/chqzeng.github.io/images/ERA5.png?raw=true\"/>"
             ],
             "text/plain": [
               "<IPython.core.display.Image object>"
@@ -201,6 +201,7 @@
       "cell_type": "markdown",
       "source": [
         "<img src=\"ERA5.png?raw=true\"/> \n", 
+        "<img src="ERA5.png" width="800" />",  
         "\n"
       ],
       "metadata": {
