--- a/materials/AlgaeDrive.ipynb
+++ b/materials/AlgaeDrive.ipynb
@@ -185,7 +185,7 @@
           "output_type": "execute_result",
           "data": {
             "text/html": [
-             "<img src=\"images/ERA5.png?raw=true\"/>"
+             "<img src=\"https://github.com/chqzeng/chqzeng.github.io/blob/main/images/ERA5.png?raw=true\"/>"
             ],
             "text/plain": [
               "<IPython.core.display.Image object>"
